app/globals.css
@import "tailwindcss";

@theme {
  /* fonts */
  --font-inter: var(--font-inter), ui-sans-serif, system-ui, sans-serif;
  --font-bricolage: var(--font-bricolage), sans-serif;

  /* colors */
  --color-primary: #f22a21;
  --color-paragraph: #303030;
  --color-light-gray: #f3f2f1;
}

body {
  font-family: var(--font-bricolage);
  @apply antialiased;
}

.body-container {
  max-width: 1300px;
  margin: 0 auto;
}

